Simplify code by having the config only in C.js

--- a/index.html
+++ b/index.html
@@ -497,26 +497,26 @@
           ],
           isValidData: true,
           copyStatus: "",
-          canvasWidth: config.canvasWidth || 1000,
-          canvasHeight: config.canvasHeight || 1000,
-          padding: config.padding || 50,
+          // Load all config values from C.config
+          canvasWidth: C.config.canvasWidth,
+          canvasHeight: C.config.canvasHeight,
+          padding: C.config.padding,
           numBins: 10,
           showDots: true,
-          previousCanvasWidth: config.canvasWidth || 1000,
-          previousCanvasHeight: config.canvasHeight || 1000,
-          // Style options
-          backgroundColor: config.backgroundColor || "#fffceb",
-          lineWidth: config.lineWidth || 1,
-          lineColor: config.lineColor || "#000000",
-          fontSize: config.fontSize || 12,
-          titleFontSize: config.titleFontSize || 36,
-          axisLabelColor: config.axisLabelColor || "#000000",
-          bleedMin: config.bleedMin || 0.01,
-          bleedMax: config.bleedMax || 0.03,
-          brushType: config.brushType || "charcoal",
-          gridBrushType: config.gridBrushType || "pen",
-          gridLineColor: config.gridLineColor || "#000000",
-          gridLineWidth: config.gridLineWidth || 1,
+          previousCanvasWidth: C.config.canvasWidth,
+          previousCanvasHeight: C.config.canvasHeight,
+          backgroundColor: C.config.backgroundColor,
+          lineWidth: C.config.lineWidth,
+          lineColor: C.config.lineColor,
+          fontSize: C.config.fontSize,
+          titleFontSize: C.config.titleFontSize,
+          axisLabelColor: C.config.axisLabelColor,
+          bleedMin: C.config.bleedMin,
+          bleedMax: C.config.bleedMax,
+          brushType: C.config.brushType,
+          gridBrushType: C.config.gridBrushType,
+          gridLineColor: C.config.gridLineColor,
+          gridLineWidth: C.config.gridLineWidth,
           // Collapsible sections state
           openSections: {
             dimensions: true,
