--- a/index.html
+++ b/index.html
@@ -430,7 +430,9 @@
         x-text="copyStatus"
       ></span>
       <br />
-      <button @click="updateChart()" x-text="'Update Chart'"></button>
+      <button @click="generateRandomData()">Generate random data</button>
+      <br />
+      <button @click="updateChart()" x-text="'Update chart'"></button>
       <span class="button-message" x-show="!isValidData"
         >Please enter valid JSON array</span
       >
@@ -527,6 +529,108 @@
 
           toggleSection(section) {
             this.openSections[section] = !this.openSections[section];
+          },
+
+          generateRandomData() {
+            switch (this.chartType) {
+              case "histogram":
+                const histData = [];
+                const numPoints = Math.floor(Math.random() * 50) + 30;
+                const mean = Math.random() * 50 + 50;
+                const variance = Math.random() * 400 + 100;
+
+                for (let i = 0; i < numPoints; i++) {
+                  let sum = 0;
+                  for (let j = 0; j < 6; j++) {
+                    sum += Math.random();
+                  }
+                  let normalValue = (sum / 6) * Math.sqrt(variance) + mean;
+                  histData.push(Math.round(normalValue * 10) / 10);
+                }
+                this.dataInput = JSON.stringify(histData);
+                break;
+
+              case "scatter":
+                const numClusters = Math.floor(Math.random() * 3) + 2;
+                const scatterClusters = [];
+
+                for (let c = 0; c < numClusters; c++) {
+                  const cluster = [];
+                  const clusterSize = Math.floor(Math.random() * 5) + 5;
+                  const centerX = Math.random() * 15 + 5;
+                  const centerY = Math.random() * 15 + 5;
+                  const spreadX = Math.random() * 3 + 1;
+                  const spreadY = Math.random() * 3 + 1;
+
+                  for (let i = 0; i < clusterSize; i++) {
+                    const x =
+                      centerX +
+                      (Math.random() + Math.random() + Math.random() - 1.5) *
+                        spreadX;
+                    const y =
+                      centerY +
+                      (Math.random() + Math.random() + Math.random() - 1.5) *
+                        spreadY;
+                    cluster.push({
+                      x: Math.round(x * 100) / 100,
+                      y: Math.round(y * 100) / 100,
+                    });
+                  }
+                  scatterClusters.push(cluster);
+                }
+                this.dataInput = JSON.stringify(scatterClusters);
+                break;
+
+              case "boxplot":
+                const numGroups = Math.floor(Math.random() * 3) + 3;
+                const boxplotGroups = [];
+
+                for (let g = 0; g < numGroups; g++) {
+                  const group = [];
+                  const groupSize = Math.floor(Math.random() * 40) + 50;
+                  const groupMean = Math.random() * 3 + g;
+                  const groupVariance = Math.random() * 4 + 2;
+
+                  for (let i = 0; i < groupSize; i++) {
+                    let sum = 0;
+                    for (let j = 0; j < 6; j++) {
+                      sum += Math.random();
+                    }
+                    let normalValue =
+                      (sum / 6) * Math.sqrt(groupVariance) + groupMean;
+                    group.push(Math.round(normalValue * 10) / 10);
+                  }
+
+                  boxplotGroups.push(group);
+                }
+                this.dataInput = JSON.stringify(boxplotGroups);
+                break;
+
+              case "line":
+                const numLines = Math.floor(Math.random() * 3) + 2;
+                const lineSeries = [];
+                const numPointsPerLine = Math.floor(Math.random() * 15) + 10;
+
+                for (let l = 0; l < numLines; l++) {
+                  const line = [];
+                  const baseValue = Math.random() * 5 + 1;
+                  const trend = (Math.random() - 0.5) * 0.5;
+                  const noise = Math.random() * 2 + 0.5;
+
+                  for (let i = 0; i < numPointsPerLine; i++) {
+                    const trendValue = baseValue + trend * i;
+                    const randomNoise = (Math.random() - 0.5) * noise;
+                    const value = trendValue + randomNoise;
+                    line.push(Math.round(value * 10) / 10);
+                  }
+                  lineSeries.push(line);
+                }
+                this.dataInput = JSON.stringify(lineSeries);
+                break;
+            }
+
+            // Update the chart with new random data
+            this.updateChart();
           },
 
           onChartTypeChange() {
