--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
       }
 
       input,
-      textarea {
+      textarea,
+      .dropdown {
         font-size: 16px;
       }
 
@@ -226,12 +227,13 @@
       }
 
       .dropdown {
-        width: 98px;
+        font-family: "IBM Plex Serif", sans-serif;
+        width: auto;
         margin-left: 10px;
         float: right;
         border-radius: 0;
-        border: 1px solid #000;
-        background-color: #ffffff;
+        background-color: #ffffff00;
+        color: #000;
         padding: 0;
       }
     </style>
