Align dropdowns by modifying height

--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
         width: auto;
         margin-left: 10px;
         float: right;
-        border-radius: 0;
+        height: 22px;
+        border: 0;
         background-color: #ffffff00;
         color: #000;
         padding: 0;
