Add even width to all options

--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
         background-color: #00000000;
       }
 
+      input {
+        width: 128px;
+      }
+
       input[type="number"],
       input[type="text"] {
-        width: 98px;
         margin-left: 10px;
         float: right;
         border-radius: 0;
@@ -121,13 +124,6 @@
       .collapsible-content label {
         display: block;
         margin-bottom: 8px;
-      }
-
-      .collapsible-content input[type="number"],
-      .collapsible-content input[type="text"],
-      .collapsible-content input[type="color"] {
-        width: 100px;
-        margin-left: 10px;
       }
 
       .arrow {
@@ -228,8 +224,9 @@
 
       .dropdown {
         font-family: "IBM Plex Serif", sans-serif;
-        width: auto;
+        width: 128px;
         margin-left: 10px;
+        padding-left: 10px;
         float: right;
         height: 22px;
         border: 0;
