--- a/index.html
+++ b/index.html
@@ -256,12 +256,17 @@
         </div>
         <div class="collapsible-content" x-show="openSections.dimensions">
           <label
-            >Canvas Width: <input type="number" x-model="canvasWidth"
+            >Canvas Width:
+            <input type="number" x-model="canvasWidth" @input="updateChart()"
           /></label>
           <label
-            >Canvas Height: <input type="number" x-model="canvasHeight"
+            >Canvas Height:
+            <input type="number" x-model="canvasHeight" @input="updateChart()"
           /></label>
-          <label>Padding: <input type="number" x-model="padding" /></label>
+          <label
+            >Padding:
+            <input type="number" x-model="padding" @input="updateChart()"
+          /></label>
         </div>
       </div>
 
@@ -290,7 +295,8 @@
           <br /><br />
           <div x-show="chartType === 'histogram'">
             <label
-              >Number of Bins: <input type="number" x-model="numBins"
+              >Number of Bins:
+              <input type="number" x-model="numBins" @input="updateChart()"
             /></label>
           </div>
           <div x-show="chartType === 'line'">
@@ -298,6 +304,7 @@
               <input
                 type="checkbox"
                 x-model="showDots"
+                @change="updateChart()"
                 style="width: auto; margin-left: 0; float: none"
               />
               Show Dots
@@ -314,14 +321,23 @@
         </div>
         <div class="collapsible-content" x-show="openSections.style">
           <label
-            >Background Color: <input type="color" x-model="backgroundColor"
+            >Background Color:
+            <input
+              type="color"
+              x-model="backgroundColor"
+              @input="updateChart()"
           /></label>
           <label
-            >Axis Label Color: <input type="color" x-model="axisLabelColor"
+            >Axis Label Color:
+            <input type="color" x-model="axisLabelColor" @input="updateChart()"
           /></label>
           <label>
             Brush Type:
-            <select class="dropdown" x-model="brushType">
+            <select
+              class="dropdown"
+              x-model="brushType"
+              @change="updateChart()"
+            >
               <option value="pen">Pen</option>
               <option value="rotring">Rotring</option>
               <option value="2B">2B Pencil</option>
@@ -334,7 +350,10 @@
               <option value="marker2">Marker 2</option>
             </select>
           </label>
-          <label>Line Color: <input type="color" x-model="lineColor" /></label>
+          <label
+            >Line Color:
+            <input type="color" x-model="lineColor" @input="updateChart()"
+          /></label>
           <label
             >Line Width:
             <input
@@ -343,18 +362,35 @@
               min="0.5"
               max="10"
               step="0.5"
+              @input="updateChart()"
           /></label>
           <label
             >Bleed Min:
-            <input type="number" x-model="bleedMin" min="0" max="1" step="0.01"
+            <input
+              type="number"
+              x-model="bleedMin"
+              min="0"
+              max="1"
+              step="0.01"
+              @input="updateChart()"
           /></label>
           <label
             >Bleed Max:
-            <input type="number" x-model="bleedMax" min="0" max="1" step="0.01"
+            <input
+              type="number"
+              x-model="bleedMax"
+              min="0"
+              max="1"
+              step="0.01"
+              @input="updateChart()"
           /></label>
           <label>
             Grid Brush Type:
-            <select class="dropdown" x-model="gridBrushType">
+            <select
+              class="dropdown"
+              x-model="gridBrushType"
+              @change="updateChart()"
+            >
               <option value="pen">Pen</option>
               <option value="rotring">Rotring</option>
               <option value="2B">2B Pencil</option>
@@ -368,7 +404,8 @@
             </select>
           </label>
           <label
-            >Grid Line Color: <input type="color" x-model="gridLineColor"
+            >Grid Line Color:
+            <input type="color" x-model="gridLineColor" @input="updateChart()"
           /></label>
           <label
             >Grid Line Width:
@@ -378,6 +415,7 @@
               min="0.5"
               max="10"
               step="0.5"
+              @input="updateChart()"
           /></label>
         </div>
       </div>
@@ -393,11 +431,21 @@
         <div class="collapsible-content" x-show="openSections.typography">
           <label
             >Label Font Size:
-            <input type="number" x-model="fontSize" min="8" max="24"
+            <input
+              type="number"
+              x-model="fontSize"
+              min="8"
+              max="24"
+              @input="updateChart()"
           /></label>
           <label
             >Title Font Size:
-            <input type="number" x-model="titleFontSize" min="12" max="72"
+            <input
+              type="number"
+              x-model="titleFontSize"
+              min="12"
+              max="72"
+              @input="updateChart()"
           /></label>
         </div>
       </div>
@@ -412,7 +460,7 @@
       <br />
       <button @click="generateRandomData()">Generate random data</button>
       <br />
-      <button @click="updateChart()" x-text="'Update chart'"></button>
+      <button @click="updateChart()" x-text="'Redraw chart'"></button>
       <span class="button-message" x-show="!isValidData"
         >Please enter valid JSON array</span
       >
@@ -647,7 +695,7 @@
                     Array.isArray(parsed) &&
                     parsed.every((x) => typeof x === "number")
                   ) {
-                    drawHistogram(parsed, this.numBins);
+                    drawHistogram(parsed, Number(this.numBins));
                   } else {
                     this.isValidData = false;
                     return;
